# ml_practice_v2

./: .gitignore  CLAUDE.md  PLAN.md  README.md  phase2_5_3_revision_plan.md  phase2_5_3_run_results.md  phic_psi_implementation_plan_rev2.md  phic_psi_implementation_plan_v4.md  pyproject.toml  q_head_action_plan.md  q_head_run_comparison.md
configs/: cnn_attention.yaml  cnn_baseline.yaml  inception_time.yaml  resnet1d.yaml  smoke.yaml  tcn.yaml
docs/models/: cnn_attention.md  cnn_baseline.md  inception_time.md  resnet1d.md  tcn.md
docs/pipeline/: data.md  evaluation.md  overview.md  testing.md  training.md
experiments/: plot_style.py
experiments/phic_psi_poc/: NOTES.md  analyse_predictions.py  assessment_lam0_ablation_2026-07-22.md  bootstrap_ang_mae.py  cnn_attention_config_diff.md  config_baseline.yaml  config_cnn_attention.yaml  config_cnn_baseline.yaml  config_inception_time.yaml  config_lam005_retune.yaml  config_lam005_retune_tcn.yaml  config_lam010_retune.yaml  config_lam010_retune_tcn.yaml  config_lam0_ablation.yaml  config_lam0_ablation_tcn.yaml  config_poc.yaml  config_resnet1d.yaml  config_tcn.yaml  curriculum.py  diagnostic_checks.py  diagnostic_lam005_retune.py  diagnostic_lam010_retune.py  diagnostic_log.md  doc_update_sweep_handoff_2026-07-22.md  evaluate_poc.py  experiment_index.md  experiment_summary_2026-07-22.md  (+31 more)
scripts/: evaluate.py  plot_run.py  run_all.py  run_full.py
tests/: conftest.py  test_callbacks.py  test_data_integrity.py  test_heads_spec.py  test_losses.py  test_overfit.py  test_registry.py  test_run_dirs.py  test_transforms.py
(+417 files in other folders)
