[project]
name = "ml-practice-v2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "tensorflow[and-cuda]>=2.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (overfit-one-batch); run on the lab machine with `pytest` (no -m filter)",
]
